[package]
name = "zapdb-cli"
authors = ["Smartlinuxcoder"]
version = "1.0.0"
edition = "2021"
description = "Zapdb shell interface"
readme = "README.md"
repository = "https://github.com/Smartlinuxcoder/zapdb-cli"
license-file = "LICENSE"
keywords = ["database", "db", "in-memory", "zapdb"]



[dependencies]
colored = "2.0"
prettytable-rs = "0.10"
tokio = { version = "1.0", features = ["full"] }
zapdb = "1.0.4"
